// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuthForm matches login snapshot 1`] = `
<DocumentFragment>
  <form
    aria-label="ログインフォーム"
    class="space-y-4"
  >
    <div
      class="mb-4"
    >
      <label
        class="block text-sm font-medium text-text-base"
        for="email"
      >
        メールアドレス
      </label>
      <input
        autocomplete="email"
        class="block w-full rounded-md border border-border-default bg-white px-3 py-2 text-sm focus:border-primary focus:outline-none focus:ring-2 focus:ring-primary"
        name="email"
        type="email"
      />
    </div>
    <div
      class="mb-4"
    >
      <label
        class="block text-sm font-medium text-text-base"
        for="password"
      >
        パスワード
      </label>
      <input
        autocomplete="current-password"
        class="block w-full rounded-md border border-border-default bg-white px-3 py-2 text-sm focus:border-primary focus:outline-none focus:ring-2 focus:ring-primary"
        name="password"
        type="password"
      />
    </div>
    <button
      class="w-full rounded-md bg-primary py-2 font-semibold text-white transition hover:bg-primary-light disabled:pointer-events-none disabled:opacity-50"
      type="submit"
    >
      ログイン
    </button>
  </form>
</DocumentFragment>
`;

exports[`AuthForm matches signup snapshot 1`] = `
<DocumentFragment>
  <form
    aria-label="新規登録フォーム"
    class="space-y-4"
  >
    <div
      class="mb-4"
    >
      <label
        class="block text-sm font-medium text-text-base"
        for="email"
      >
        メールアドレス
      </label>
      <input
        autocomplete="email"
        class="block w-full rounded-md border border-border-default bg-white px-3 py-2 text-sm focus:border-primary focus:outline-none focus:ring-2 focus:ring-primary"
        name="email"
        type="email"
      />
    </div>
    <div
      class="mb-4"
    >
      <label
        class="block text-sm font-medium text-text-base"
        for="password"
      >
        パスワード
      </label>
      <input
        autocomplete="current-password"
        class="block w-full rounded-md border border-border-default bg-white px-3 py-2 text-sm focus:border-primary focus:outline-none focus:ring-2 focus:ring-primary"
        name="password"
        type="password"
      />
    </div>
    <button
      class="w-full rounded-md bg-primary py-2 font-semibold text-white transition hover:bg-primary-light disabled:pointer-events-none disabled:opacity-50"
      type="submit"
    >
      新規登録
    </button>
  </form>
</DocumentFragment>
`;
